[build-system]
requires = ["hatchling", "setuptools>=65.0"]
build-backend = "hatchling.build"

[project]
name = "ludwig"
dynamic = ["version"]
description = "Declarative machine learning: End-to-end machine learning pipelines using data-driven configurations."
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.10"
authors = [{ name = "Piero Molino", email = "piero.molino@gmail.com" }]
keywords = [
    "computer",
    "deep",
    "deep_learning",
    "language",
    "learning",
    "ludwig",
    "machine",
    "machine_learning",
    "natural",
    "processing",
    "vision",
]

dependencies = [
    "absl-py",
    "bitsandbytes<0.41.0",
    "captum",
    "Cython>=0.25,<1.0",
    "cloudpickle",
    "dataclasses-json",
    "datasets",
    "fastapi",
    "filelock",
    "fsspec[http]<=2023.10.0",
    "getdaft==0.1.20",
    "gpustat",
    "h5py>=2.6,!=3.0.0",
    "httpx",
    "html5lib",
    "hummingbird",
    "hummingbird.ml",
    "imagecodecs",
    "jsonschema>=4.5.0,<4.7",
    "kaggle",
    "lightgbm",
    "lxml",
    "marshmallow",
    "marshmallow-dataclass==8.5.4",
    "marshmallow-jsonschema",
    "matplotlib>=3.5,<3.8",
    "mlflow",
    "nltk",
    "numpy==1.26",
    "openpyxl>=3.0.7",
    "packaging",
    "pandas",
    "protobuf",
    "psutil",
    "ptitprince",
    "py-cpuinfo==9.0.0",
    "pyarrow<15.0.0",
    "pydantic<2.0",
    "pythran>=0.9",
    "pyxlsb>=1.0.8",
    "PyYAML==6.0.2",
    "requests",
    "retry",
    "rich~=12.4.4",
    "sacremoses",
    "scikit-learn==1.3",
    "scipy>=0.18",
    "sentencepiece",
    "spacy",
    "tabulate>=0.7",
    "tensorboard",
    "tokenizers>=0.15",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchinfo",
    "torchmetrics>=0.11.0",
    "torchvision==0.19.1",
    "tqdm",
    "transformers>=4.42.3",
    "urllib3<2",
    "xlrd>=2.0.1",
    "xlsxwriter>=1.4.3",
    "xlwt",
    "tifffile==2024.9.20",
    "onnx",
    "wget",
    "starlette",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["flake8", "flake8-pyproject", "pre-commit", "setuptools"]
test = [
    # Core testing
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "tifffile",
    "wget",
    "six>=1.13.0",

    # Logging and experiment tracking
    "aim",
    "wandb<0.12.11",
    "comet_ml",
    "mlflow",
    "sqlalchemy<2",  # Pinned for aimstack compatibility

    # Ray Tune Search Algorithms
    "hpbandster",            # BOHB algorithm
    "ConfigSpace==0.7.1",
    "ax-platform",           # AX algorithm
    "bayesian-optimization", # Bayesian optimization
    "flaml[blendsearch]",    # CFO and blendsearch
    "HEBO",                  # HEBO algorithm
    "nevergrad",             # Nevergrad algorithm
    "optuna",                # Optuna algorithm
    "scikit-optimize",       # SKopt algorithm
    "zoopt",                 # ZOOpt algorithm

    # Storage
    "s3fs>=2022.8.2",
]
benchmarking = ["s3fs"]
distributed = [
    "awscli",
    "dask[dataframe]<2023.4.0",
    "deepspeed!=0.11.0,<0.13.0",
    "getdaft[ray]==0.1.20",
    "GPUtil",
    "pyarrow",
    "ray[default,data,serve,tune]==2.3.1",
    "tblib",
    "tensorboardX<2.3",
]
explain = ["captum"]
extra = [
    "horovod[pytorch]>=0.24.0,!=0.26.0",
    "modin[ray]",
    "predibase>=2023.10.2",
]
hyperopt = ["hyperopt", "ray[default,tune]>=2.0.0"]
llm = [
    "accelerate",
    "faiss-cpu",
    "loralib",
    "peft>=0.10.0",
    "sentence-transformers",
]
serve = [
    "cartonml-nightly",
    "fastapi",
    "httpx",
    "neuropod==0.3.0rc6 ; platform_system != \"Windows\" and python_version < '3.9'",
    "python-multipart",
    "uvicorn",
    "starlette",
]
tree = ["hummingbird-ml>=0.4.8", "lightgbm", "lightgbm-ray"]
viz = [
    "hiplot",
    "matplotlib",
    "ptitprince",
    "seaborn",
]

[project.urls]
Download = "https://pypi.org/project/ludwig/"
Homepage = "https://github.com/ludwig-ai/ludwig"
Website = "https://ludwig.ai/latest/"

[project.scripts]
ludwig = "ludwig.cli:main"

[tool.hatch.version]
path = "ludwig/__about__.py"

[tool.hatch.build.targets.sdist]
include = ["/ludwig", "/tests"]

# ------- flake8 ----------
[tool.flake8]
max-line-length = 120
exclude = [".tox", "*.egg", "*_pb2.py", "build", "temp"]
select = ["E", "W", "F"]
doctests = true
verbose = 2
format = "pylint"
ignore = [
    "E731",
    "W503",
    "E203",
    "E231",
    "E241",
    "E221",
    "E225",
    "E226",
    "E241",
    "E271",
    "E275",
    "E501",
]

[tool.hatch.envs.test]
dependencies = ["cloudpickle","matplotlib"]

[tool.hatch.envs.lint]
dependencies = ["flake8", "flake8-pyproject"]

[tool.hatch.envs.lint.scripts]
style = "flake8 ."

[tool.hatch.envs.default]
python = "3.11"
dependencies = ["setuptools>=65.0"]

[tool.hatch.envs.dev]
python = "3.11"
dependencies = [".[dev]"]


[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120
exclude = "./python/"
